# py3nj

./: .gitignore  .travis.yml  HOW_TO_PUBLISH.md  MANIFEST  README.md  meson.build  pyproject.toml  setup.py
.github/actions/setup-build-env/: action.yml
.github/workflows/: ci.yaml  ci.yml  conda.yml  linux.yml  mac.yml  publish.yml  test.yml  windows.yml
ci/: requirements-py27.yml  requirements-py36.yml
ci/requirements/: py3.10.yml  py3.6.yml  py3.8.yml
doc/: api.rst  conf.py  environment.yml  examples.rst  index.rst  whats-new.rst
fortran/: _wigner.pyf  d1mach.f  drc.f90  drc3jj.f  make.sh  test.f90  wigner.f90  xermsg.f
py3nj/: __init__.py  wigner.py
src/: __init__.py
tests/: test_3j.py  test_6j.py  test_9j.py  test_cg.py
utils/: version.py
