[build-system]
requires = ["meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = "py3nj"
authors = [
  {name = "Keisuke Fujii", email = "fujiisoup@gmail.com"},
]
description = "numpy compatible wigner 3n-J symbols"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["atomic physics", "quantum physics"]
requires-python = '~=3.8'
dependencies = [
  "numpy",
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
"Source Code" = "http://github.com/fujiisoup/py3nj"

